# OOP.14

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: category.py  product.py
tests/: conftest.py  test_category.py  test_product.py
